<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.mlh.reciplease.UI.Fragments.HomeFragment"
        android:label="@string/recipes"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_favourites"
        android:name="com.mlh.reciplease.UI.Fragments.FavouritesFragment"
        android:label="@string/favourites"
        tools:layout="@layout/fragment_favourites" />

    <fragment
        android:id="@+id/navigation_recipes"
        android:name="com.mlh.reciplease.UI.Fragments.RecipesFragment"
        android:label="@string/my_recipes"
        tools:layout="@layout/fragment_recipes" />
</navigation>
