<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_view_recipe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="19dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeWidth="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="150dp"
                android:layout_height="0dp"
                android:contentDescription="@string/recipe_thumbnail"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/title_tv_recipe"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="TextView"
                android:textColor="@color/title_color"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/description_tv_recipe"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:ellipsize="end"
                android:maxLines="3"
                android:text="TextView"
                android:textColor="@color/description_color"
                app:layout_constraintEnd_toEndOf="@+id/title_tv_recipe"
                app:layout_constraintStart_toStartOf="@+id/title_tv_recipe"
                app:layout_constraintTop_toBottomOf="@+id/title_tv_recipe" />

            <ImageView
                android:id="@+id/like_img_recipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:contentDescription="@string/likes"
                app:layout_constraintEnd_toEndOf="@+id/like_tv_recipe"
                app:layout_constraintStart_toStartOf="@+id/like_tv_recipe"
                app:layout_constraintTop_toBottomOf="@+id/description_tv_recipe"
                app:srcCompat="@drawable/ic_favorite_filled"
                app:tint="@color/dark_pink" />

            <TextView
                android:id="@+id/like_tv_recipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="1"
                android:textAlignment="center"
                android:textColor="@color/dark_pink"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/description_tv_recipe"
                app:layout_constraintTop_toBottomOf="@+id/like_img_recipe" />

            <ImageView
                android:id="@+id/time_img_recipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/time_taken"
                app:layout_constraintBottom_toBottomOf="@+id/like_img_recipe"
                app:layout_constraintEnd_toEndOf="@+id/time_tv_recipe"
                app:layout_constraintStart_toStartOf="@+id/time_tv_recipe"
                app:layout_constraintTop_toTopOf="@+id/like_img_recipe"
                app:srcCompat="@drawable/ic_timer"
                app:tint="@color/yellow" />

            <TextView
                android:id="@+id/time_tv_recipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="1"
                android:textAlignment="center"
                android:textColor="@color/yellow"
                app:layout_constraintStart_toEndOf="@+id/like_tv_recipe"
                app:layout_constraintTop_toBottomOf="@+id/time_img_recipe" />

            <ImageView
                android:id="@+id/food_type_img_recipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/food_type"
                app:layout_constraintBottom_toBottomOf="@+id/time_img_recipe"
                app:layout_constraintEnd_toEndOf="@+id/food_type_tv_recipe"
                app:layout_constraintStart_toStartOf="@+id/food_type_tv_recipe"
                app:layout_constraintTop_toTopOf="@+id/time_img_recipe"
                app:srcCompat="@drawable/ic_vegan"
                app:tint="@color/item_color" />

            <TextView
                android:id="@+id/food_type_tv_recipe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:text="TextView"
                android:textAlignment="center"
                android:textColor="@color/item_color"
                app:layout_constraintStart_toEndOf="@+id/time_tv_recipe"
                app:layout_constraintTop_toBottomOf="@+id/food_type_img_recipe" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>